--- a/.devcontainer/Containerfile
+++ b/.devcontainer/Containerfile
@@ -3,12 +3,13 @@ FROM registry.fedoraproject.org/fedora:latest AS fonts
 RUN dnf install -y unzip ibm-plex-*-fonts ipa*-fonts mrsw-biz-*-fonts \
   && curl -L -O https://github.com/yuru7/udev-gothic/releases/download/v2.1.0/UDEVGothic_NF_v2.1.0.zip \
   && unzip UDEVGothic_NF_v2.1.0.zip -d /usr/share/fonts/ \
-  && rm -f UDEVGothic_NF_v2.1.0.zip
+  && rm -f UDEVGothic_NF_v2.1.0.zip \
+  && dnf clean all
 
 # Main stage
 FROM mcr.microsoft.com/devcontainers/base:alpine
 
-# intall typst-cli
+# install typst-cli
 RUN curl -L https://github.com/typst/typst/releases/latest/download/typst-x86_64-unknown-linux-musl.tar.xz | tar -xJvf - \
   && install typst-*/typst /usr/local/bin/ \
   && rm -rf typst-*
